Removes most DOM including for loops

--- a/index.html
+++ b/index.html
@@ -12,7 +12,40 @@
     <title>Calculator</title>
 </head>
 <body>
-    <div class="calculator"></div>
+    <div class="calculator">
+        <div class="display"></div>
+        <div class="btns">
+            <div class="left">
+                <div class="leftTop">
+                    <button class="clear">C</button>
+                    <button class="del">DEL</button>
+                </div>
+                <div class="nums">
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                    <button class="leftBtns"></button>
+                </div>
+                <div class="leftBottom">
+                    <button class="bottomBtns">%</button>
+                    <button class="bottomBtns">0</button>
+                    <button class="bottomBtns">.</button>
+                </div>
+            </div>
+            <div class="operation">
+                <button class="operateBtns"></button>
+                <button class="operateBtns"></button>
+                <button class="operateBtns"></button>
+                <button class="operateBtns"></button>
+                <button class="operateBtns"></button>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
