Add functionality to decimal button

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                     <button class="leftBtns"></button>
                 </div>
                 <div class="leftBottom">
-                    <button class="bottomBtns">%</button>
-                    <button class="bottomBtns">0</button>
-                    <button class="bottomBtns">.</button>
+                    <button class="bottomBtns" id="percentage">%</button>
+                    <button class="bottomBtns" id="zero">0</button>
+                    <button class="bottomBtns" id="decimal">.</button>
                 </div>
             </div>
             <div class="operation">
