Add num2 when equals is clicked

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <button class="operateBtns"></button>
                 <button class="operateBtns"></button>
                 <button class="operateBtns"></button>
-                <button class="operateBtns"></button>
+                <button class="equals">=</button>
             </div>
         </div>
     </div>
